# project/controllers/userController.js
@@ -5,7 +5,9 @@ exports.createUser = (req, res) => {
   const { username, password, email } = req.body;
   console.log(`username- ${username} pass - ${password} email - ${email}`)
   pool.query('INSERT INTO users (username, password, email) VALUES (?, ?, ?)', [username, password, email], (error, results) => {
-    if (error) throw error;
+    if (error){ 
+    console.log(`error -${error}`)
+    throw error;}
     res.json({ message: 'User added successfully' });
   });
 };
@@ -23,5 +25,14 @@ exports.loginUser = (req, res) => {
       // User not found or credentials incorrect
       res.status(401).json({ message: 'Invalid username or password' });
     }
+  });
+};
+
+
+exports.getAllUsers = (req, res) => {
+  pool.query('SELECT id, username FROM users', (error, results) => {
+    if (error) throw error;
+    console.log(`result get userList- ${JSON.stringify(results)}`)
+    res.json(results);
   });
 };
